src/app/pages/rover-by-openstax/popup/popup.scss
@import 'pattern-library/core/pattern-library/headers';

.transition-popup {
    background-color: ui-color(white);
    background-size: 0;
    border-radius: 0.4rem;
    color: text-color(normal);
    max-width: 140rem;
    overflow: hidden;
    padding: 2rem 4rem;
    position: relative;
    width: 100%;

    @include wider-than($tablet-max) {
        background-position: 0;
        background-repeat: no-repeat;
        background-size: auto 100%;
        padding-left: 51rem;
    }

    @include width-between($tablet-max, $media-content-max) {
        background-position: calc(100vw - 120rem);
    }

    h2 {
        @include set-font(h2);
    }

    .text-content {
        text-align: center;
        padding: 6rem 0;

        @include width-up-to($phone-max) {
            padding: 4rem 1rem;
        }

        > * {
            margin: 0;
        }

        > * ~ * {
            margin-top: 3rem;
        }
    }

    .close-popup {
        cursor: pointer;
        font-size: 2.4rem;
        padding-right: 0.5rem;
        position: absolute;
        right: 2.5rem;
        top: 2.5rem;
    }

    .button-area {
        align-items: center;
        display: grid;
        grid-auto-flow: row;
        grid-row-gap: 2rem;
    }
}

